--- a/app/src/main/res/layout/segunda_tela.xml
+++ b/app/src/main/res/layout/segunda_tela.xml
@@ -8,7 +8,7 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nova Tela"
+        android:text="Tela anterior"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
